Resolve tertiary visibility on locations / lifegroups

--- a/scss/pages/_lifegroups.scss
+++ b/scss/pages/_lifegroups.scss
@@ -8,6 +8,10 @@
     padding-bottom: 8px;
   }
 
+  .lifegroups .page-tertiary {
+    visibility: hidden;
+  }
+
   .lifegroups-hero-1 {
     left: 0;
     background: url("http://placekitten.com/1000/701") no-repeat;
